--- a/css/fluid.css
+++ b/css/fluid.css
@@ -4,19 +4,11 @@ body {
 
 /* --------------------------------------------------------
  *
- *
- *
  *  Centurion Framework v 3.1 - FLUID
- *
  *  Created by: Justin Hough
  *
- *
- *
  *  Documentation: http://jhough10.github.com/Centurion/documentation.html
- *
  *  Licensed under GPL and MIT.
- *
- *
  *
  * -------------------------------------------------------- */
 /* Desktop/Tablet Fluid Grid Layout - 92% */
@@ -183,12 +175,7 @@ body {
   margin-right: auto;
 }
 
-@media screen and (max-width: 920px) {
-  .container {
-    width: 98%;
-  }
-}
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 200px) and (max-width: 768px) {
   .container {
     width: 100%;
     margin-left: auto;
@@ -223,11 +210,21 @@ body {
   }
 
   .hide-desktop {
-    display: none;
+    display: block;
   }
 
   .hide-mobile {
-    display: block;
+    display: none;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 920px) {
+  .container {
+    width: 98%;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .container {
+    width: 1120px;
   }
 }
 .centerGrid {
