--- a/sass/core/_vars.sass
+++ b/sass/core/_vars.sass
@@ -66,6 +66,7 @@ $dh-margin: 15px 0
 $dw-margin: 0 15px
 $d-margin: 15px
 $no-margin: 0
+$b-margin: 0 0 15px 0
 
 
 // Padding
@@ -73,6 +74,7 @@ $dh-padding: 15px 0
 $dw-padding: 0 15px
 $d-padding: 15px
 $no-padding: 0
+$b-padding: 0 0 15px 0
 
 $table-pad: 5px 10px
 
