updated Sass files with misc fixes

--- a/sass/core/_alerts.sass
+++ b/sass/core/_alerts.sass
@@ -15,6 +15,9 @@
     padding: 10px 20px
     @extend %relative
     
+    p
+      margin-bottom: 0
+    
     .close
       cursor: pointer
       font-size: $default-font-size
