--- a/sass/core/_tabs.sass
+++ b/sass/core/_tabs.sass
@@ -37,6 +37,8 @@
   
       .active
         border: none
+        bottom: -1px
+        position: relative
         a
           &,
           &:hover
@@ -70,7 +72,7 @@
       left: 0
   
       .active
-        margin-top: -1px
+        top: -1px
         a,
         a:hover
           border-bottom-color: $border-color
