--- a/sass/core/_tooltips.sass
+++ b/sass/core/_tooltips.sass
@@ -1,5 +1,5 @@
 @mixin tooltips
-  a.tipClick,
+  a.tooltip,
   a.tipHover 
     color: $green
     cursor: pointer
@@ -12,40 +12,22 @@
       color: $black
       text-decoration: underline
 
-  .tooltip 
+  .theTooltip    
+    
     bottom: 20px
     color: $green
+    display: none
     left: 0
     overflow: hidden
     position: absolute
     width: 250px
     z-index: 9999
     
-    .tipHeader 
-      height: 10px
-      width: 220px
-      background: $white
-      border: 2px solid $almost-white
-      border-bottom: none
-      border-radius: 6px 6px 0 0
-    
-    .tipFooter 
-      height: 10px
-      width: 220px
-      background: $white
-      border: 2px solid $almost-white
-      border-top: none
-      border-radius: 0 0 6px 6px
-      
-    .toolBodyWidth 
-      width: 220px
-      background: $white
-      border-left: 2px solid $almost-white
-      border-right: 2px solid $almost-white
-    
     .tipBody
+      background: #FFF
+      border: 2px solid $almost-white
       color: #000
-      padding: 0 15px
+      padding: 15px
       
     .arrow-up
       display: none
@@ -59,28 +41,11 @@
       left: 15px
       position: relative
 
-  
   .tipBottom 
-    .tooltip 
+    .theTooltip
       left: 0
-      bottom: -150px
-    
-      .tipBody 
-        color: #000
-        padding: 0 15px
+      bottom: -110px
 
-      .tipHeader 
-        background: $white
-        border: 2px solid $almost-white
-        border-bottom: none
-        border-radius: 6px 6px 0 0
-    
-      .tipFooter 
-        background: $white
-        border: 2px solid $almost-white
-        border-top: none
-        border-radius: 0 0 6px 6px
-      
       .arrow-down
         display: none
       
@@ -93,6 +58,15 @@
         border-bottom: 10px solid $almost-white
         left: 15px
         position: relative
+
+
+  .tooltip
+    &.on
+      .theTooltip
+        display: block
+  
+  
+  
     
     
     
