--- a/sass/custom.sass
+++ b/sass/custom.sass
@@ -77,36 +77,7 @@ footer
 
 
 @media screen and (min-width: 320px) and (max-width: 520px)
-  .mobile
-    position: relative
-    span
-      background: #EDEDED
-      cursor: pointer
-      display: block
-      font-family: "Open Sans", sans-serif
-      font-size: 1em
-      padding: $dh-padding
-      text-indent: 10px
-    
-    .menuIcon
-      background: #CCC
-      display: block
-      height: 35px
-      padding: 0
-      position: absolute
-      top: 5px
-      right: 5px      
-      width: 35px
-    ul
-      display: none
-      width: 100%
-      li 
-        display: block
-        width: 100%
-        a
-          padding: $dh-padding
-          text-indent: 20px
-          width: 100%
+  @include navigation-mobile
         
 
 @media screen and (min-width: 521px) and (max-width: 768px)
