--- a/styles/elusive-webfont.css
+++ b/styles/elusive-webfont.css
@@ -1,9 +1,10 @@
 @font-face {
-  font-family: "Elusive-Icons";
-  src: url(font/Elusive-Icons.eot?#iefix) format("embedded-opentype");
-  src: url(font/Elusive-Icons.svg) format("svg");
-  src: url(font/Elusive-Icons.woff) format("woff");
-  src: url(font/Elusive-Icons.ttf) format("truetype");
+  font-family: 'Elusive-Icons';
+  src:url('font/Elusive-Icons.eot');
+  src:url('font/Elusive-Icons.eot?#iefix') format('embedded-opentype'),
+    url('font/Elusive-Icons.woff') format('woff'),
+    url('font/Elusive-Icons.ttf') format('truetype'),
+    url('font/Elusive-Icons.svg#Elusive-Icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
