--- a/styles/centurion.css
+++ b/styles/centurion.css
@@ -380,6 +380,7 @@ ul.cCrumbs li:last-child:after {
 }
 .button:hover, .button:active, .button:visited {
   color: white;
+  background-color: #3d3d3d;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #9b9b9b), color-stop(100%, #3d3d3d));
   background-image: -webkit-linear-gradient(#9b9b9b, #3d3d3d);
   background-image: -moz-linear-gradient(#9b9b9b, #3d3d3d);
@@ -388,6 +389,7 @@ ul.cCrumbs li:last-child:after {
 }
 .button.grey {
   color: #555555;
+  background-color: #e5e5e5;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #e5e5e5));
   background-image: -webkit-linear-gradient(#ffffff, #e5e5e5);
   background-image: -moz-linear-gradient(#ffffff, #e5e5e5);
@@ -396,6 +398,7 @@ ul.cCrumbs li:last-child:after {
 }
 .button.grey:hover, .button.grey:active, .button.grey:visited {
   color: #555555;
+  background-color: #b7b7b7;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #b7b7b7));
   background-image: -webkit-linear-gradient(#ffffff, #b7b7b7);
   background-image: -moz-linear-gradient(#ffffff, #b7b7b7);
@@ -403,6 +406,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#ffffff, #b7b7b7);
 }
 .button.blue {
+  background-color: #23538a;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #a7cfdf), color-stop(100%, #23538a));
   background-image: -webkit-linear-gradient(#a7cfdf, #23538a);
   background-image: -moz-linear-gradient(#a7cfdf, #23538a);
@@ -410,6 +414,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#a7cfdf, #23538a);
 }
 .button.blue:hover, .button.blue:active, .button.blue:visited {
+  background-color: #004089;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #a7cfdf), color-stop(100%, #004089));
   background-image: -webkit-linear-gradient(#a7cfdf, #004089);
   background-image: -moz-linear-gradient(#a7cfdf, #004089);
@@ -417,6 +422,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#a7cfdf, #004089);
 }
 .button.red {
+  background-color: #cf0404;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ff3019), color-stop(100%, #cf0404));
   background-image: -webkit-linear-gradient(#ff3019, #cf0404);
   background-image: -moz-linear-gradient(#ff3019, #cf0404);
@@ -424,6 +430,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#ff3019, #cf0404);
 }
 .button.red:hover, .button.red:active, .button.red:visited {
+  background-color: #aa0303;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ff3819), color-stop(100%, #aa0303));
   background-image: -webkit-linear-gradient(#ff3819, #aa0303);
   background-image: -moz-linear-gradient(#ff3819, #aa0303);
@@ -432,6 +439,7 @@ ul.cCrumbs li:last-child:after {
 }
 .button.yellow {
   color: #555555;
+  background-color: #febf04;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fced62), color-stop(100%, #febf04));
   background-image: -webkit-linear-gradient(#fced62, #febf04);
   background-image: -moz-linear-gradient(#fced62, #febf04);
@@ -440,6 +448,7 @@ ul.cCrumbs li:last-child:after {
 }
 .button.yellow:hover, .button.yellow:active, .button.yellow:visited {
   color: #555555;
+  background-color: #ffaa00;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fced62), color-stop(100%, #ffaa00));
   background-image: -webkit-linear-gradient(#fced62, #ffaa00);
   background-image: -moz-linear-gradient(#fced62, #ffaa00);
@@ -447,6 +456,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#fced62, #ffaa00);
 }
 .button.orange {
+  background-color: #ff7b0d;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffa84c), color-stop(100%, #ff7b0d));
   background-image: -webkit-linear-gradient(#ffa84c, #ff7b0d);
   background-image: -moz-linear-gradient(#ffa84c, #ff7b0d);
@@ -454,6 +464,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#ffa84c, #ff7b0d);
 }
 .button.orange:hover, .button.orange:active, .button.orange:visited {
+  background-color: #fc6000;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffa84c), color-stop(100%, #fc6000));
   background-image: -webkit-linear-gradient(#ffa84c, #fc6000);
   background-image: -moz-linear-gradient(#ffa84c, #fc6000);
@@ -461,6 +472,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#ffa84c, #fc6000);
 }
 .button.green {
+  background-color: #75890c;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #a4b357), color-stop(100%, #75890c));
   background-image: -webkit-linear-gradient(#a4b357, #75890c);
   background-image: -moz-linear-gradient(#a4b357, #75890c);
@@ -468,6 +480,7 @@ ul.cCrumbs li:last-child:after {
   background-image: linear-gradient(#a4b357, #75890c);
 }
 .button.green:hover, .button.green:active, .button.green:visited {
+  background-color: #5b7a00;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #a4b357), color-stop(100%, #5b7a00));
   background-image: -webkit-linear-gradient(#a4b357, #5b7a00);
   background-image: -moz-linear-gradient(#a4b357, #5b7a00);
