--- a/css/centurion.css
+++ b/css/centurion.css
@@ -602,24 +602,25 @@ img.responsive {
 /* Navigation */
 nav {
   font-size: 1em;
-  margin-bottom: 10px;
   width: 100%;
+}
+nav ul {
+  display: inline;
 }
 nav ul li {
   display: inline;
 }
 nav ul li a {
   color: #333333;
+  display: inline-block;
   margin: 0;
-  padding: 15px 20px;
+  padding: 5px;
 }
-nav ul li a:hover, nav ul li a:visited {
-  background: #cccccc;
+nav ul li a:visited {
   color: black;
 }
-nav ul li a.on {
-  background: #cccccc;
-  color: black;
+nav ul li a:hover, nav ul li a.on {
+  color: #a4b357;
 }
 nav.stacked {
   width: 100%;
@@ -1042,7 +1043,7 @@ nav ul, nav ul li, .tabBox .tabs li, ul {
   cursor: pointer;
 }
 
-img.lfloat, nav, nav ul, nav ul li, nav ul li a, .pagination, .pagination ul li, .tabBox .tabs li {
+img.lfloat, nav, .pagination, .pagination ul li, .tabBox .tabs li {
   float: left;
 }
 
