moved styling for navigation into custom stylesheet

--- a/sass/custom.sass
+++ b/sass/custom.sass
@@ -11,6 +11,11 @@ ul, ol
 /* HEADER */
 header
   border-bottom: 1px solid $grey
+  padding-bottom: 20px
+  nav
+    ul
+      li
+        padding: 15px 20px 15px 0
 
 
 /* CONTENT */
