--- a/sass/core/_vars.sass
+++ b/sass/core/_vars.sass
@@ -22,6 +22,8 @@
 // green:hover    -   #a4b357   #5b7a00
 
 
+$body-font-size: 15px
+
 // Font Size
 $default-font-size: 1em
 $small-font-size: .8em
