Moved extendibles mixin to base from vars

--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -14,3 +14,30 @@
 @import "tooltips"
 @import "typography"
 @import "vars"
+
+@mixin extendables  
+  %noMarPad
+    margin: 0
+    padding: 0
+  
+  %absolute
+    position: absolute
+    
+  %relative
+    position: relative
+
+  %noTextDecoration
+    text-decoration: none
+  
+  %cursor
+    cursor: pointer
+  
+  %auto-center
+    margin-left: auto
+    margin-right: auto
+    
+  %float-left
+    float: left
+  
+  %float-right
+    float: right
